<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/appBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movieBanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_collapseMode="parallax" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    />

            </RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                >

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/textMargn">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                android:id="@+id/poster"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/textMargn"/>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                android:id="@+id/detailsContainer"
                android:layout_margin="@dimen/textMargn">

                <TextView
                    style="@style/defaultTextViewStyle"
                    android:id="@+id/releaseDate"
                    android:layout_margin="@dimen/textMargn"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:isIndicator="true"
                    android:rating="3.0"
                    android:id="@+id/moveRating"
                    />

                <TextView
                    style="@style/defaultTextViewStyle"
                    android:id="@+id/voteNumber"/>

            </LinearLayout>


        </RelativeLayout>

            <TextView
                style="@style/defaultTextViewStyle"
                android:textStyle="normal"
                android:id="@+id/overView"
                android:gravity="left"
                tools:text= "Lorem ipsum dolor sit amet, has ne maiestatis sententiae, purto magna detracto cu vis. Has et modo graeci, ne nam nostrud necessitatibus, sea quodsi democritum eu. Ei cum mutat essent. Mei ea tollit senserit mediocrem. Cum assentior referrentur ex, augue voluptua efficiantur qui in."
                android:layout_margin="@dimen/textMargn"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/trailersContainer"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reviewsContainer"
                android:layout_marginBottom="@dimen/textSize"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|right"
        android:src="@drawable/rating_star" />


</android.support.design.widget.CoordinatorLayout>