<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/popular"
        android:title="@string/menu_popular"
        app:showAsAction="never"/>

    <item android:id="@+id/top_rated"
        android:title="@string/menu_top_rated"
        app:showAsAction="never"/>

    <item android:id="@+id/fav"
        android:title="@string/favMovies"
        app:showAsAction="never"/>

</menu>