<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ark.movieapp.ui.activity.HomeActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/movieList"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/errorMsg"
        style="@style/defaultTextViewStyle"
        android:layout_gravity="center"
        android:visibility="gone" />

</RelativeLayout>